Remove --add-opens options